Updated guidance page and booklet
Added guidance page based on 2019 content (round 2 open) and booklet without watermark.

--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -25,7 +25,7 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="guidance">
+      <td class="govuk-table__cell"><a href="guidance-2019">
           Countryside Productivity Scheme Guidance
         </a></td>
       <td class="govuk-table__cell">Prototype guidance page for Countryside Productivity Scheme (based on current webpage)</td>
