--- a/app/views/current/views/guidance-2019.html
+++ b/app/views/current/views/guidance-2019.html
@@ -96,6 +96,10 @@
 
 <p>We have videos on our YouTube account that can help you apply:</p>
 
+<p><a rel="external" href="https://www.youtube.com/watch?v=WYU0JobUMjk">Advocate video</a></p>
+
+<p><a rel="external" href="https://www.youtube.com/watch?v=53VcS61Lgtk&amp;t=54s">How to… video</a></p>
+
 <h3 id="if-you-have-any-questions">If you have any questions</h3>
 
 <p>Once you have read the handbook, if you have any questions please email <a rel="external" href="mailto:CPSGEnquiries@rpa.gov.uk">CPSGEnquiries@rpa.gov.uk</a> or call 03000 200301 and follow the options for the Countryside Productivity Small Grant scheme.</p>
