--- a/app/views/current/views/guidance-2019.html
+++ b/app/views/current/views/guidance-2019.html
@@ -3,7 +3,7 @@
 
 {% block guidance %}
 
-<div id="toc" class="toc"></div>
+<div id="toc" class="toc govuk-!-margin-bottom-9"></div>
 
 <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
 
