--- a/app/views/current/views/layouts/GUIDANCE.html
+++ b/app/views/current/views/layouts/GUIDANCE.html
@@ -22,23 +22,6 @@ Countryside Productivity Scheme
 
 <div id="global-header-bar"></div>
 
-
-  <div class="global-bar-message govuk-width-container">
-    <div class="global-bar-covid-wrapper">
-      <div class="gem-c-action-link gem-c-action-link--light-text gem-c-action-link--with-subtext govuk-!-margin-bottom-0">
-        <span class="gem-c-action-link__contents-wrapper"> <span class="gem-c-action-link__link-wrapper">
-            <a class="govuk-link gem-c-action-link__link js-call-to-action" href="/coronavirus">
-              Coronavirus (COVID-19)
-            </a>
-          </span>
-          <span class="gem-c-action-link__subtext-wrapper">
-            <span class="gem-c-action-link__subtext">Guidance and support</span>
-          </span>
-        </span>
-      </div>
-    </div>
-  </div>
-
 <div class="gem-c-contextual-breadcrumbs">
 
   <div class="gem-c-breadcrumbs govuk-breadcrumbs " data-module="track-click">
@@ -95,8 +78,8 @@ Countryside Productivity Scheme
             </dt>
             <dd class="app-c-publisher-metadata__definition" data-module="gem-toggle">
               <span class="app-c-publisher-metadata__definition-sentence">
-                <a class="govuk-link" href="/government/organisations/department-for-environment-food-rural-affairs">Department for Environment, Food &amp; Rural Affairs</a>, <a class="govuk-link"
-                  href="/government/organisations/rural-payments-agency">Rural Payments Agency</a>, and <a class="govuk-link" href="/government/organisations/rural-development-programme-for-england-network">Rural Development Programme for England
+                <a class="govuk-link" href="https://gov.uk/government/organisations/department-for-environment-food-rural-affairs">Department for Environment, Food &amp; Rural Affairs</a>, <a class="govuk-link"
+                  href="https://gov.uk/government/organisations/rural-payments-agency">Rural Payments Agency</a>, and <a class="govuk-link" href="https://gov.uk/government/organisations/rural-development-programme-for-england-network">Rural Development Programme for England
                   Network</a>
               </span>
             </dd>
@@ -111,11 +94,28 @@ Countryside Productivity Scheme
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <div id="toc" class="toc"></div>
-
     <!-- start of guidance specific block -->
     {% block guidance %}Guidance content goes here, override this by overriding the block{% endblock %}
     <!-- end guidance specific block-->
+
+    <div class="responsive-bottom-margin">
+      <div class="app-c-published-dates app-c-published-dates--history" id="history" data-module="toggle" lang="en">
+        Published 31 July 2017
+        <br>Last updated 9 July 2019
+        <a href="#full-history" class="app-c-published-dates__toggle" data-controls="full-history" data-expanded="false" data-toggled-text="-&nbsp;hide all updates" role="button" aria-controls="full-history" aria-expanded="false">+&nbsp;show all
+          updates</a>
+      </div>
+    </div>
+    <div data-sticky-element="" class="app-c-contents-list-with-body__link-wrapper govuk-sticky-element--enabled">
+      <div class="app-c-contents-list-with-body__link-container">
+        <a class="govuk-link app-c-back-to-top dont-print" href="#toc">
+          <svg class="app-c-back-to-top__icon" xmlns="http://www.w3.org/2000/svg" width="13" height="17" viewBox="0 0 13 17">
+            <path fill="currentColor" d="M6.5 0L0 6.5 1.4 8l4-4v12.7h2V4l4.3 4L13 6.4z"></path>
+          </svg>
+          Contents
+        </a>
+      </div>
+    </div>
 
   </div>
 
@@ -134,24 +134,24 @@ Countryside Productivity Scheme
           <ul class="gem-c-related-navigation__link-list" data-module="track-click">
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.1 Related content" data-track-label="/guidance/rural-development-programme-for-england-leader-funding"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Rural Development Programme for England: LEADER funding&quot;}" href="/guidance/rural-development-programme-for-england-leader-funding">Rural
+                data-track-action="1.1 Related content" data-track-label="https://gov.uk/guidance/rural-development-programme-for-england-leader-funding"
+                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Rural Development Programme for England: LEADER funding&quot;}" href="https://gov.uk/guidance/rural-development-programme-for-england-leader-funding">Rural
                 Development Programme for England: LEADER funding</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.2 Related content" data-track-label="/guidance/small-grant-scheme-livestock-handling-items-in-short-supply"
+                data-track-action="1.2 Related content" data-track-label="https://gov.uk/guidance/small-grant-scheme-livestock-handling-items-in-short-supply"
                 data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Small Grant scheme - livestock handling items in short supply&quot;}"
-                href="/guidance/small-grant-scheme-livestock-handling-items-in-short-supply">Small Grant scheme - livestock handling items in short supply</a></li>
+                href="https://gov.uk/guidance/small-grant-scheme-livestock-handling-items-in-short-supply">Small Grant scheme - livestock handling items in short supply</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.3 Related content" data-track-label="/guidance/check-if-youre-eligible-for-the-coronavirus-small-business-grant-fund"
+                data-track-action="1.3 Related content" data-track-label="https://gov.uk/guidance/check-if-youre-eligible-for-the-coronavirus-small-business-grant-fund"
                 data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Check if you're eligible for the coronavirus Small Business Grant Fund&quot;}"
-                href="/guidance/check-if-youre-eligible-for-the-coronavirus-small-business-grant-fund">Check if you're eligible for the coronavirus Small Business Grant Fund</a></li>
+                href="https://gov.uk/guidance/check-if-youre-eligible-for-the-coronavirus-small-business-grant-fund">Check if you're eligible for the coronavirus Small Business Grant Fund</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.4 Related content" data-track-label="/government/publications/water-environment-grant-weg-handbooks-guidance-and-forms"
+                data-track-action="1.4 Related content" data-track-label="https://gov.uk/government/publications/water-environment-grant-weg-handbooks-guidance-and-forms"
                 data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Water Environment Grant (WEG) handbooks: guidance and forms&quot;}"
-                href="/government/publications/water-environment-grant-weg-handbooks-guidance-and-forms">Water Environment Grant (WEG) handbooks: guidance and forms</a></li>
+                href="https://gov.uk/government/publications/water-environment-grant-weg-handbooks-guidance-and-forms">Water Environment Grant (WEG) handbooks: guidance and forms</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar gem-c-related-navigation__section-link--inline  gem-c-related-navigation__section-link--other"
-                data-track-category="relatedLinkClicked" data-track-action="1.5 Related content" data-track-label="/government/publications/rdpe-growth-programme"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;RDPE Growth Programme&quot;}" href="/government/publications/rdpe-growth-programme">RDPE Growth Programme</a></li>
+                data-track-category="relatedLinkClicked" data-track-action="1.5 Related content" data-track-label="https://gov.uk/government/publications/rdpe-growth-programme"
+                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;RDPE Growth Programme&quot;}" href="https://gov.uk/government/publications/rdpe-growth-programme">RDPE Growth Programme</a></li>
 
           </ul>
         </nav>
@@ -163,8 +163,8 @@ Countryside Productivity Scheme
           <ul class="gem-c-related-navigation__link-list" data-module="track-click">
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar" data-track-category="relatedLinkClicked" data-track-action="2.1 Collection"
-                data-track-label="/government/collections/rural-payments-and-grants" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural payments and grants&quot;}"
-                href="/government/collections/rural-payments-and-grants">Rural payments and grants</a></li>
+                data-track-label="https://gov.uk/government/collections/rural-payments-and-grants" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural payments and grants&quot;}"
+                href="https://gov.uk/government/collections/rural-payments-and-grants">Rural payments and grants</a></li>
 
           </ul>
         </nav>
@@ -174,6 +174,34 @@ Countryside Productivity Scheme
     </div>
 
   </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+
+      <div class="gem-c-contextual-footer">
+
+        <div class="gem-c-related-navigation">
+
+          <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-topics-0e73d175" data-module="gem-toggle">
+
+            <h2 id="related-nav-topics-0e73d175" class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer" data-track-count="footerRelatedItemSection">Explore the topic</h2>
+
+            <ul class="gem-c-related-navigation__link-list" data-module="track-click">
+
+              <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" data-track-category="relatedLinkClicked" data-track-action="1.1 Explore the topic"
+                  data-track-label="https://gov.uk/topic/farming-food-grants-payments/rural-grants-payments" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural grants and payments&quot;}"
+                  href="https://gov.uk/topic/farming-food-grants-payments/rural-grants-payments">Rural grants and payments</a></li>
+
+            </ul>
+          </nav>
+
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
 </div>
 
 {% endblock %}
