--- a/app/views/current/views/includes/header-publisher-links.html
+++ b/app/views/current/views/includes/header-publisher-links.html
@@ -23,37 +23,37 @@
         <nav id="proposition-menu" class="no-proposition-name gem-c-government-navigation">
           <ul id="proposition-links">
             <li>
-              <a class="" href="#">
+              <a class="" href="https://gov.uk/government/organisations">
                 Departments
               </a>
             </li>
             <li>
-              <a class="" href="#">
+              <a class="" href="https://gov.uk/government/world">
                 Worldwide
               </a>
             </li>
             <li>
-              <a class="" href="#">
+              <a class="" href="https://gov.uk/government/how-government-works">
                 How government works
               </a>
             </li>
             <li>
-              <a class="" href="#">
+              <a class="" href="https://gov.uk/government/get-involved">
                 Get involved
               </a>
             </li>
             <li class="clear-child">
-              <a class="" href="#">
+              <a class="" href="https://gov.uk/search/policy-papers-and-consultations?content_store_document_type%5B%5D=open_consultations&amp;amp;content_store_document_type%5B%5D=closed_consultations">
                 Consultations
               </a>
             </li>
             <li>
-              <a class="" href="#">
+              <a class="" href="https://gov.uk/search/research-and-statistics">
                 Statistics
               </a>
             </li>
             <li>
-              <a class="" href="#">
+              <a class="" href="https://gov.uk/news-and-communications">
                 News and communications
               </a>
             </li>
