--- a/app/views/current/views/layouts/GUIDANCELINKS.html
+++ b/app/views/current/views/layouts/GUIDANCELINKS.html
@@ -30,8 +30,8 @@ Countryside Productivity Scheme
         <a data-track-category="homeLinkClicked" data-track-action="homeBreadcrumb" data-track-label="" data-track-options="{}" class="govuk-breadcrumbs__link" aria-current="false" href="/">Home</a>
       </li>
       <li class="govuk-breadcrumbs__list-item" aria-current="false">
-        <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="#" data-track-options="{}" class="govuk-breadcrumbs__link" aria-current="false"
-          href="#">Rural grants and payments </a>
+        <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="/topic/farming-food-grants-payments/rural-grants-payments" data-track-options="{}" class="govuk-breadcrumbs__link" aria-current="false"
+          href="/topic/farming-food-grants-payments/rural-grants-payments">Rural grants and payments </a>
       </li>
     </ol>
   </div>
@@ -78,8 +78,8 @@ Countryside Productivity Scheme
             </dt>
             <dd class="app-c-publisher-metadata__definition" data-module="gem-toggle">
               <span class="app-c-publisher-metadata__definition-sentence">
-                <a class="govuk-link" href="#">Department for Environment, Food &amp; Rural Affairs</a>, <a class="govuk-link"
-                  href="#">Rural Payments Agency</a>, and <a class="govuk-link" href="#">Rural Development Programme for England
+                <a class="govuk-link" href="https://gov.uk/government/organisations/department-for-environment-food-rural-affairs">Department for Environment, Food &amp; Rural Affairs</a>, <a class="govuk-link"
+                  href="https://gov.uk/government/organisations/rural-payments-agency">Rural Payments Agency</a>, and <a class="govuk-link" href="https://gov.uk/government/organisations/rural-development-programme-for-england-network">Rural Development Programme for England
                   Network</a>
               </span>
             </dd>
@@ -134,24 +134,24 @@ Countryside Productivity Scheme
           <ul class="gem-c-related-navigation__link-list" data-module="track-click">
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.1 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Rural Development Programme for England: LEADER funding&quot;}" href="#">Rural
+                data-track-action="1.1 Related content" data-track-label="https://gov.uk/guidance/rural-development-programme-for-england-leader-funding"
+                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Rural Development Programme for England: LEADER funding&quot;}" href="https://gov.uk/guidance/rural-development-programme-for-england-leader-funding">Rural
                 Development Programme for England: LEADER funding</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.2 Related content" data-track-label="#"
+                data-track-action="1.2 Related content" data-track-label="https://gov.uk/guidance/small-grant-scheme-livestock-handling-items-in-short-supply"
                 data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Small Grant scheme - livestock handling items in short supply&quot;}"
-                href="#">Small Grant scheme - livestock handling items in short supply</a></li>
+                href="https://gov.uk/guidance/small-grant-scheme-livestock-handling-items-in-short-supply">Small Grant scheme - livestock handling items in short supply</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.3 Related content" data-track-label="#"
+                data-track-action="1.3 Related content" data-track-label="https://gov.uk/guidance/check-if-youre-eligible-for-the-coronavirus-small-business-grant-fund"
                 data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Check if you're eligible for the coronavirus Small Business Grant Fund&quot;}"
-                href="#">Check if you're eligible for the coronavirus Small Business Grant Fund</a></li>
+                href="https://gov.uk/guidance/check-if-youre-eligible-for-the-coronavirus-small-business-grant-fund">Check if you're eligible for the coronavirus Small Business Grant Fund</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.4 Related content" data-track-label="#"
+                data-track-action="1.4 Related content" data-track-label="https://gov.uk/government/publications/water-environment-grant-weg-handbooks-guidance-and-forms"
                 data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Water Environment Grant (WEG) handbooks: guidance and forms&quot;}"
-                href="#">Water Environment Grant (WEG) handbooks: guidance and forms</a></li>
+                href="https://gov.uk/government/publications/water-environment-grant-weg-handbooks-guidance-and-forms">Water Environment Grant (WEG) handbooks: guidance and forms</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar gem-c-related-navigation__section-link--inline  gem-c-related-navigation__section-link--other"
-                data-track-category="relatedLinkClicked" data-track-action="1.5 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;RDPE Growth Programme&quot;}" href="#">RDPE Growth Programme</a></li>
+                data-track-category="relatedLinkClicked" data-track-action="1.5 Related content" data-track-label="https://gov.uk/government/publications/rdpe-growth-programme"
+                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;RDPE Growth Programme&quot;}" href="https://gov.uk/government/publications/rdpe-growth-programme">RDPE Growth Programme</a></li>
 
           </ul>
         </nav>
@@ -163,8 +163,8 @@ Countryside Productivity Scheme
           <ul class="gem-c-related-navigation__link-list" data-module="track-click">
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar" data-track-category="relatedLinkClicked" data-track-action="2.1 Collection"
-                data-track-label="#" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural payments and grants&quot;}"
-                href="#">Rural payments and grants</a></li>
+                data-track-label="https://gov.uk/government/collections/rural-payments-and-grants" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural payments and grants&quot;}"
+                href="https://gov.uk/government/collections/rural-payments-and-grants">Rural payments and grants</a></li>
 
           </ul>
         </nav>
@@ -189,8 +189,8 @@ Countryside Productivity Scheme
             <ul class="gem-c-related-navigation__link-list" data-module="track-click">
 
               <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" data-track-category="relatedLinkClicked" data-track-action="1.1 Explore the topic"
-                  data-track-label="#" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural grants and payments&quot;}"
-                  href="#">Rural grants and payments</a></li>
+                  data-track-label="https://gov.uk/topic/farming-food-grants-payments/rural-grants-payments" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural grants and payments&quot;}"
+                  href="https://gov.uk/topic/farming-food-grants-payments/rural-grants-payments">Rural grants and payments</a></li>
 
             </ul>
           </nav>
