added new sprint
Added new folder for large grants

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,8 +19,13 @@
       </h1>
 
       <dl class="govuk-list">
-        <dt><a href="/current/views/">Version 01</a></dt>
-        <dd>Start of alpha.</dd>
+        <dt><a href="/current/views/">Version 02</a></dt>
+        <dd>Alpha sprint 5 - large grants service</dd>
+      </dl>
+
+      <dl class="govuk-list">
+        <dt><a href="/v1/views/">Version 01</a></dt>
+        <dd>Alpha sprint 3 - small grants service</dd>
       </dl>
 
     </div>
