--- a/app/views/v1/views/index.html
+++ b/app/views/v1/views/index.html
@@ -25,45 +25,33 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><!--<a href="guidance-2019">-->
-          Large grants outline application
-        <!--</a>--></td>
-      <td class="govuk-table__cell">Water resource management prototype (WIP)</td>
+      <td class="govuk-table__cell"><a href="guidance-2019">
+          Countryside Productivity Scheme Guidance
+        </a></td>
+      <td class="govuk-table__cell">Prototype guidance page for Countryside Productivity Scheme (based on current webpage)</td>
     </tr>
   </tbody>
 </table>
 
-<h2 class="govuk-heading-m govuk-!-margin-top-9">
-  Pages
+<!--<h2 class="govuk-heading-m govuk-!-margin-top-7">
+  Experiments
 </h2>
 
 <table class="govuk-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Page</th>
+      <th class="govuk-table__header" scope="col">Experiment</th>
       <th class="govuk-table__header" scope="col">Description</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="/start">
-          Start page
-        </a></td>
-      <td class="govuk-table__cell">Outline application start page</td>
-    </tr>
-    <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="#">
-          Confirmation page
+          Experiment 1
         </a></td>
-      <td class="govuk-table__cell">Outline application confirmation page</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="#">
-          Guidance page
-        </a></td>
-      <td class="govuk-table__cell">Large grants guidance page</td>
+      <td class="govuk-table__cell">Alpha experiment 1</td>
     </tr>
   </tbody>
-</table>
+</table>-->
 
 {% endblock %}
