New task list page

--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -63,6 +63,12 @@
         </a></td>
       <td class="govuk-table__cell">Large grants guidance page</td>
     </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="task-list">
+          Task list
+        </a></td>
+      <td class="govuk-table__cell">Task list page for the '{{serviceName}}' service</td>
+    </tr>
   </tbody>
 </table>
 
