--- a/app/views/current/views/layouts/GUIDANCE.html
+++ b/app/views/current/views/layouts/GUIDANCE.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Countryside Productivity Scheme
+Large Countryside Productivity Grants - GOV.UK
 {% endblock %}
 
 {% block header %}
@@ -50,7 +50,7 @@ Countryside Productivity Scheme
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Countryside Productivity Scheme
+        Large Countryside Productivity Grants
       </h1>
     </div>
 
