added eligibility questions
added eligibility questions

--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -46,7 +46,7 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="/start">
+      <td class="govuk-table__cell"><a href="start">
           Start page
         </a></td>
       <td class="govuk-table__cell">Outline application start page</td>
