--- a/app/views/current/views/farming-type-fail.html
+++ b/app/views/current/views/farming-type-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You're not eligible for large grants
+  You're not eligible for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,12 +14,12 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        You're not eligible for large grants
+        You're not eligible for a large countryside productivity grant
       </h1>
 
-      <p>The large grants scheme is only open to arable and horticultural farming businesses.</p>
+      <p>Large countryside productivity grants are only available to arable and horticultural farming businesses.</p>
 
-      <p>Other farming businesses may be supported in future schemes. See <a href="">the large grants guidance</a> for further information.</p>
+      <p>Other farming businesses may be supported in future schemes. See <a href="">The large countryside productivity grant guidance</a> for further information.</p>
 
     </div>
   </div>
