--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -25,10 +25,10 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><!--<a href="guidance-2019">-->
-          Large grants outline application
-        <!--</a>--></td>
-      <td class="govuk-table__cell">Water resource management prototype (WIP)</td>
+      <td class="govuk-table__cell"><a href="start">
+          Large grants expression of interest
+        </a></td>
+      <td class="govuk-table__cell">Water resource management EOI</td>
     </tr>
   </tbody>
 </table>
