--- a/app/views/current/views/project-start-fail.html
+++ b/app/views/current/views/project-start-fail.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="country">Back</a>
+  <a class="govuk-back-link" href="project-start">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -17,9 +17,9 @@
         You're not eligible for a large countryside productivity grant
       </h1>
 
-      <p>The large countryside productivity grant scheme is only open to businesses located in England.</p>
+      <p>Only projects that have not yet started will be considered for a large countryside productivity grant.</p>
 
-      <p>Farming businesses in other UK countries may be eligible for a similar grant through their equivalent domestic schemes. See <a href="">The large countryside productivity grant guidance</a> for further information.</p>
+      <p>To view what activities count towards a project that has been started, see <a href="">the large countryside productivity grant guidance</a>.</p>
 
     </div>
   </div>
