--- a/app/views/current/views/farming-type.html
+++ b/app/views/current/views/farming-type.html
@@ -24,20 +24,20 @@
             </legend>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="farming-type" name="farming-type" type="radio" value="arable farming">
+                <input class="govuk-radios__input" id="farming-type" name="farming-type" type="radio" value="arable farming" {{ checked("farming-type", "arable farming") }}>
                 <label class="govuk-label govuk-radios__label" for="farming-type">
                   Arable
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="farming-type-2" name="farming-type" type="radio" value="horticultural">
+                <input class="govuk-radios__input" id="farming-type-2" name="farming-type" type="radio" value="horticultural" {{ checked("farming-type", "horticultural") }}>
                 <label class="govuk-label govuk-radios__label" for="farming-type-2">
                   Horticulture
                 </label>
               </div>
               <div class="govuk-radios__divider">or</div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="farming-type-3" name="farming-type" type="radio" value="none">
+                <input class="govuk-radios__input" id="farming-type-3" name="farming-type" type="radio" value="none" {{ checked("farming-type", "none") }}>
                 <label class="govuk-label govuk-radios__label" for="farming-type-3">
                   None of the above
                 </label>
