--- a/app/views/current/views/legal-status-fail.html
+++ b/app/views/current/views/legal-status-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You're not eligible for large grants
+  You're not eligible for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,10 +14,10 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        You're not eligible for large grants
+        You're not eligible for a large countryside productivity grant
       </h1>
 
-      <p class="govuk-body">The large grants scheme is only open to businesses which have one of the following legal statuses:</p>
+      <p class="govuk-body">The large countryside productivity grant scheme is only open to businesses which have one of the following legal statuses:</p>
 
         <ul class="govuk-list govuk-list--bullet">
           <li>Sole Trader</li>
@@ -30,7 +30,7 @@
           <li>Public Organisation</li>
         </ul>
 
-      <p>Other types of business may be supported in future schemes. See <a href="">the large grants guidance</a> for further information.</p>
+      <p>Other types of business may be supported in future schemes. See <a href="">The large countryside productivity grant guidance</a> for further information.</p>
 
     </div>
   </div>
