--- a/app/views/current/views/legal-status.html
+++ b/app/views/current/views/legal-status.html
@@ -24,56 +24,56 @@
             </legend>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status" name="legal-status" type="radio" value="sole-trader">
+                <input class="govuk-radios__input" id="legal-status" name="legal-status" type="radio" value="sole trader" {{ checked("legal-status", "sole trader") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status">
                   Sole Trader
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-2" name="legal-status" type="radio" value="partnership">
+                <input class="govuk-radios__input" id="legal-status-2" name="legal-status" type="radio" value="partnership" {{ checked("legal-status", "partnership") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-2">
                   Partnership
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-3" name="legal-status" type="radio" value="limited-company">
+                <input class="govuk-radios__input" id="legal-status-3" name="legal-status" type="radio" value="limited company" {{ checked("legal-status", "limited company") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-3">
                   Limited Company
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-4" name="legal-status" type="radio" value="trust">
+                <input class="govuk-radios__input" id="legal-status-4" name="legal-status" type="radio" value="trust" {{ checked("legal-status", "trust") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-4">
                   Trust
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-5" name="legal-status" type="radio" value="limited-liability-partnership">
+                <input class="govuk-radios__input" id="legal-status-5" name="legal-status" type="radio" value="limited liability partnership" {{ checked("legal-status", "limited liability partnership") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-5">
                   Limited Liability Partnership
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-6" name="legal-status" type="radio" value="charity">
+                <input class="govuk-radios__input" id="legal-status-6" name="legal-status" type="radio" value="charity" {{ checked("legal-status", "charity") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-6">
                   Charity
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-7" name="legal-status" type="radio" value="community-interest-organisation">
+                <input class="govuk-radios__input" id="legal-status-7" name="legal-status" type="radio" value="community interest organisation" {{ checked("legal-status", "community interest organisation") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-7">
                   Community Interest Organisation
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-8" name="legal-status" type="radio" value="public-organisation">
+                <input class="govuk-radios__input" id="legal-status-8" name="legal-status" type="radio" value="public organisation" {{ checked("legal-status", "public organisation") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-8">
                   Public Organisation
                 </label>
               </div>
               <div class="govuk-radios__divider">or</div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-9" name="legal-status" type="radio" value="none">
+                <input class="govuk-radios__input" id="legal-status-9" name="legal-status" type="radio" value="none" {{ checked("legal-status", "none") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-9">
                   None of the above
                 </label>
