--- a/app/views/current/views/project-cost.html
+++ b/app/views/current/views/project-cost.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/url/of/previous/page">Back</a>
+  <a class="govuk-back-link" href="/tenancy">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,13 +13,18 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Heading or question goes here</h1>
+      <form class="form" action="/project-cost-answer" method="post">
 
-      <form class="form" action="/url/of/next/page" method="post">
-
-        <p>[Insert question content here]</p>
-
-        <p>[See <a href="https://design-system.service.gov.uk">the GOV.UK Design System</a> for examples]. Total grant funded expenditure (£) net of VAT (Unless VAT is non-recoverable)</p>
+        <div class="govuk-form-group">
+          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="project-cost">
+              What are your estimate total project costs?
+            </label>
+          </h1>
+          <div id="account-number-hint" class="govuk-hint">
+             Your costs should be net of VAT (Unless VAT is non-recoverable)
+          </div>
+          <span class="govuk-body">£</span> <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
+        </div>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
