--- a/app/views/current/views/tenancy-length-fail.html
+++ b/app/views/current/views/tenancy-length-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You're not eligible for large grants
+  You're not eligible for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,12 +14,12 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        You may not be eligible for large grants
+        You may be eligible for a large countryside productivity grant
       </h1>
 
-      <p>To be considered eligible for the large grants scheme, you would need to secure an extension to your tenancy agreement prior to submitting a full application.</p>
+      <p>To be considered eligible for a large countryside productivity grant scheme, you would need to secure an extension to your tenancy agreement prior to submitting a full application.</p>
 
-      <form class="form" action="/project-cost" method="post">
+      <form class="form" action="project-cost" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
