Added theme eligibility section

--- a/app/views/current/views/check-answers-project-eligibility.html
+++ b/app/views/current/views/check-answers-project-eligibility.html
@@ -15,7 +15,7 @@
 
     <h1 class="govuk-heading-l">Check your answers</h1>
 
-    <h2 class="govuk-heading-m">Eligibility checks</h2>
+    <h2 class="govuk-heading-m">Project eligibility checks</h2>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
@@ -150,7 +150,7 @@
     </div>
     {% endif %}
 
-    <form action="/form-handler" method="post" novalidate>
+    <form action="project-items" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
