--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -49,19 +49,19 @@
       <td class="govuk-table__cell"><a href="start">
           Start page
         </a></td>
-      <td class="govuk-table__cell">Outline application start page</td>
+      <td class="govuk-table__cell">Expression of Interest start page</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="#">
-          Confirmation page
+      <td class="govuk-table__cell"><a href="farming-type">
+          Project eligibility
         </a></td>
-      <td class="govuk-table__cell">Outline application confirmation page</td>
+      <td class="govuk-table__cell">Expression of Interest project eligibility</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="#">
-          Guidance page
+      <td class="govuk-table__cell"><a href="project-items">
+          Theme eligibility
         </a></td>
-      <td class="govuk-table__cell">Large grants guidance page</td>
+      <td class="govuk-table__cell">Expression of Interest theme eligibility</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="task-list">
@@ -69,6 +69,7 @@
         </a></td>
       <td class="govuk-table__cell">Task list page for the '{{serviceName}}' service</td>
     </tr>
+
   </tbody>
 </table>
 
