Contact details section added

--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -64,6 +64,18 @@
       <td class="govuk-table__cell">Expression of Interest theme eligibility</td>
     </tr>
     <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="business">
+          Contact details
+        </a></td>
+      <td class="govuk-table__cell">Expression of Interest contact details</td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="">
+          Project benefits
+        </a></td>
+      <td class="govuk-table__cell">Expression of Interest project benefits</td>
+    </tr>
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="task-list">
           Task list
         </a></td>
