--- a/app/views/current/views/check-answers-theme-eligibility.html
+++ b/app/views/current/views/check-answers-theme-eligibility.html
@@ -146,12 +146,12 @@
       {% endif %}
     </dl>
 
-    {% if (data['tenancy'] == "yes") and (data['tenancy-length'] == "no") %}
+    {% if (data['abstraction-licence'] == "yes") and (data['abstraction-variation'] == "yes") %}
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Important</span>
-        You will need to secure an extension to your tenancy agreement prior to submitting a full application.
+        You will need to secure a variation to your abstraction licence prior to submitting a full application.
       </strong>
     </div>
     {% endif %}
